--- a/Web/angular.json
+++ b/Web/angular.json
@@ -99,7 +99,7 @@
               "node_modules/aos/dist/aos.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": ["node_modules/@fortawesome/fontawesome-free/js/all.min.js"]
           }
