--- a/Web/package.json
+++ b/Web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "web",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -13,27 +13,34 @@
   "dependencies": {
     "@angular/animation": "^4.0.0-beta.8",
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
     "@angular/localize": "^9.1.13",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "angular-calendar": "^0.28.26",
+    "angular-moment": "^1.3.0",
+    "angular2-text-mask": "^9.0.0",
     "angularx-flatpickr": "^6.6.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.0.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "date-fns": "^2.22.1",
     "express": "^4.17.1",
     "flatpickr": "^4.6.9",
     "font-awesome": "^4.7.0",
+    "method-override": "^3.0.0",
     "ngx-bootstrap": "^6.2.0",
-    "ngx-mat-calendar": "0.0.10",
+    "ngx-mat-calendar": "0.0.7",
     "rxjs": "~6.4.0",
+    "safe-pipe": "^1.0.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -58,5 +65,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 8.3.23.",
+  "main": "karma.conf.js",
+  "author": "",
+  "license": "ISC"
 }
