--- a/Web/package.json
+++ b/Web/package.json
@@ -39,6 +39,7 @@
     "method-override": "^3.0.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-mat-calendar": "0.0.7",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.4.0",
     "safe-pipe": "^1.0.3",
     "tslib": "^1.10.0",
