--- a/Web/package.json
+++ b/Web/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "@types/jquery": "^3.5.8",
     "angular-calendar": "^0.28.26",
     "angular-moment": "^1.3.0",
     "angular2-text-mask": "^9.0.0",
