--- a/Web/package.json
+++ b/Web/package.json
@@ -32,14 +32,18 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.0.2",
     "cors": "^2.8.5",
-    "crypto-js": "^4.0.0",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.22.1",
+    "directpay-ipg-js": "^1.0.28",
     "express": "^4.17.1",
     "flatpickr": "^4.6.9",
     "font-awesome": "^4.7.0",
     "method-override": "^3.0.0",
+    "ng-direct-pay-ipg": "^1.0.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-image-compress": "^11.0.3",
+    "ngx-loading": "^8.0.0",
     "ngx-mat-calendar": "0.0.7",
     "ngx-pagination": "^5.1.1",
     "rxjs": "~6.4.0",
@@ -55,7 +59,7 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.9",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
